UAT fix: no spacing between menu and categ banner

--- a/web/assets/css/articleList.css
+++ b/web/assets/css/articleList.css
@@ -1,6 +1,6 @@
 .ls_banner {
   margin-bottom: -3px;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .al_two_col_container {
